--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,10 @@ footer{
 
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
+    font-family: "Montserrat";
 }
 
 p {
     text-align: center;
+    font-family: "Montserrat";
 }
