--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@ button {
     cursor: not-allowed;
 }
 
+.enterButton {
+    font-size: 1em;
+    padding: 5px 10px;
+    /* Center horizontally */
+    border-radius: 0.3em;
+
+}
+
+
 .gameButton {
     font-size: 1.2em;
     padding: 10px 15px;
@@ -22,11 +31,6 @@ button {
     margin: 20px auto;
     display: block;
     border-radius: 0.3em;
-    background-color: #70d260;
-}
-
-.gameButton:active {
-    background-color: #60c050
 }
 
 footer{
